# Road-Anomaly-Detector

./: .gitignore  LICENSE  README.md  distances.csv  environment.yml  middle.csv  x_coords.csv
Road Anomaly Detector/: LICENSE  Makefile  environment.yml  pyproject.toml
Road Anomaly Detector/road_anomaly_detector/Simulation/gazebo_models/: camera_robot.sdf  camera_static.sdf
Test/Test_17_09_2024/: Test_con.txt
Test/Test_17_09_2024/exp_100_lux_75k/: Basler_r2L4096-84g5m__40510490__20240917_142659144_0006.tiff  Basler_r2L4096-84g5m__40510490__20240917_142659144_0017.tiff
Test/Test_17_09_2024/exp_150_lux_75k/: Basler_r2L4096-84g5m__40510490__20240917_142317948_0005.tiff  Basler_r2L4096-84g5m__40510490__20240917_142317948_0009.tiff
Test/Test_17_09_2024/exp_200_lux_75k/: Basler_r2L4096-84g5m__40510490__20240917_142113847_0000.tiff  Basler_r2L4096-84g5m__40510490__20240917_142113847_0004.tiff  Basler_r2L4096-84g5m__40510490__20240917_142113847_0011.tiff
Test/Test_17_09_2024/exp_250_lux_75k/: Basler_r2L4096-84g5m__40510490__20240917_141846156_0004.tiff  Basler_r2L4096-84g5m__40510490__20240917_141846156_0007.tiff  (+1 more)
docs/Presentations/: Thesis schedule presentation week 3.pptm
notebooks/: Calibration.ipynb  CameraSpecs.ipynb
road_anomaly_detector/Calibration/: Calibration_encoder.py  Calibration_placement.py  Image_acqusition.py
road_anomaly_detector/Pypylon_samples/: gige_linescan_performance_demo_opencv.py
road_anomaly_detector/main/: Grab.cpp  StichImage.cpp  StichImage.h
test/: distances.csv  middle.csv  x_coords.csv
(+93 files in other folders)
