[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "road_anomaly_detector"
version = "0.0.1"
description = "The objective is to find a cheaper way to detect cracks and stress in asphalt pavement on public roads."
authors = [
  { name = "Dynatest" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=The new approach to investigate potential is by using a camera rather than a laser scanner.3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["road_anomaly_detector"]
force_sort_within_sections = true
